@@ -1,6 +1,8 @@
 #include "lxgui/gui_focusframe.hpp"
 #include "lxgui/gui_manager.hpp"
 #include "lxgui/gui_uiobject_tpl.hpp"
+#include "lxgui/gui_alive_checker.hpp"
+#include "lxgui/input.hpp"
 
 using namespace lxgui::input;
 
@@ -10,12 +12,9 @@ namespace gui
 focus_frame::focus_frame(utils::control_block& mBlock, manager& mManager) : frame(mBlock, mManager)
 {
     lType_.push_back(CLASS_NAME);
-}
 
-focus_frame::~focus_frame()
-{
-    if (has_focus())
-        get_manager().request_focus(nullptr);
+    register_event("KEYBOARD_FOCUS_LOST");
+    register_event("KEYBOARD_FOCUS_GAINED");
 }
 
 void focus_frame::copy_from(const uiobject& mObj)
@@ -27,6 +26,20 @@ void focus_frame::copy_from(const uiobject& mObj)
         return;
 
     this->enable_auto_focus(pFocusFrame->is_auto_focus_enabled());
+}
+
+void focus_frame::on_event(const event& mEvent)
+{
+    alive_checker mChecker(*this);
+
+    base::on_event(mEvent);
+    if (!mChecker.is_alive())
+        return;
+
+    if (mEvent.get_name() == "KEYBOARD_FOCUS_LOST")
+        notify_focus_(false);
+    else if (mEvent.get_name() == "KEYBOARD_FOCUS_GAINED")
+        notify_focus_(true);
 }
 
 void focus_frame::create_glue()
@@ -46,19 +59,11 @@ bool focus_frame::is_auto_focus_enabled() const
 
 void focus_frame::set_focus(bool bFocus)
 {
-    if (bFocus == bFocus_)
-        return;
-
+    auto& mInput = get_manager().get_input_manager();
     if (bFocus)
-    {
-        notify_focus(true);
-        get_manager().request_focus(observer_from(this));
-    }
-    else if (bFocus_)
-    {
-        notify_focus(false);
-        get_manager().request_focus(nullptr);
-    }
+        mInput.request_keyboard_focus(observer_from(this));
+    else
+        mInput.release_keyboard_focus(*this);
 }
 
 bool focus_frame::has_focus() const
@@ -66,9 +71,17 @@ bool focus_frame::has_focus() const
     return bFocus_;
 }
 
-void focus_frame::notify_focus(bool bFocus)
+void focus_frame::notify_focus_(bool bFocus)
 {
+    if (bFocus_ == bFocus)
+        return;
+
     bFocus_ = bFocus;
+
+    if (bFocus_)
+        on_script("OnFocusGained");
+    else
+        on_script("OnFocusLost");
 }
 
 void focus_frame::notify_visible()
